# Euclid

./: .clang-format  .clangd  CMakeLists.txt  LICENSE
src/algorithm/convex_hull/: extreme_edge.h  extreme_point.h  graham_scan.h  util.h
src/algorithm/util/: location.h  sort.h
src/geometry/: point.h  point_2d.h  triangle.h  triangle_2d.h
src/util/: compare.h
test/: convex_hull_test.cpp  locate_test.cpp
